--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     <div class="section" id="college-trends">
         <div class="subsection">
             <div class="image">
-                <img src="photos/college_1.png" alt="Top 10 Colleges with Most NBA Players">
+                <img src="photos/college_1.png" alt="Colleges with Most Players in the NBA">
             </div>
             <div class="text">
                 <h3>a. Top 10 Colleges with the Most Players in the NBA</h3>
-                <p>Explanation about the top colleges with the most NBA players...</p>
+                <p>In this first graph, well-known, dominant basketball programs like Duke and Kentucky lead the list, which is expected given their storied histories and large numbers of high-caliber players. These programs have a long tradition of excellence in college basketball and have been successful in sending a significant number of players to the NBA, underscoring their status as powerhouse institutions for budding professional athletes.</p>
             </div>
         </div>
         <div class="subsection">
@@ -84,7 +84,7 @@
             </div>
             <div class="text">
                 <h3>b. Top 10 Colleges with Highest Number of Lottery Picks</h3>
-                <p>Explanation about the top colleges with the highest number of lottery picks...</p>
+                <p>This graph continues to highlight the dominance of programs such as Duke and Kentucky, showcasing the sheer volume of lottery picks they have produced. This reflects not just the ability to attract elite high school talent, but also the capability of these colleges to maintain a consistent level of performance and visibility that places their players in the spotlight for NBA drafts.</p>
             </div>
         </div>
         <div class="subsection">
@@ -93,7 +93,7 @@
             </div>
             <div class="text">
                 <h3>c. Top 10 Colleges with Highest % of NBA Players as Lottery Picks</h3>
-                <p>Explanation about the top colleges with the highest percentage of NBA players as lottery picks...</p>
+                <p>This final graph features some less prominent programs like Pacific and Bowling Green, suggesting that while they may not produce as many NBA players overall, a higher percentage of those who do make it are selected as lottery picks. This could indicate that certain programs are particularly effective at developing their players into top prospects, even if they have fewer players who make it to the NBA. This final graph provides a relative measure that accounts for the size of the program, giving a sense of efficiency or quality over quantity. The discrepancy between this final graph and the former two might suggest that more prominent programs are better at recruiting already talented players who are likely to become lottery picks, while the less prominent programs might be better at talent development. This final graph shows a diversity of programs contributing to the NBA's top draft picks, challenging the perception that only the "blue blood" basketball schools are the main paths to NBA success.</p>
             </div>
         </div>
     </div>
@@ -170,6 +170,8 @@
 
     <footer>
         &copy; 2023 NBA Analytics. All rights reserved.
+        <br>
+        <a href="https://colab.research.google.com/drive/1cD5KvZAb_S08g9TvZ4lMjLXjFT-IfuSC?usp=sharing" target="_blank">View Colab Notebook</a>
     </footer>
     <script src="scripts.js"></script>
 </body>
