--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
 
     <footer>
         &copy; 2023 NBA Analytics. All rights reserved.
-        <br>
-        <a href="https://colab.research.google.com/drive/1cD5KvZAb_S08g9TvZ4lMjLXjFT-IfuSC?usp=sharing" target="_blank">View Colab Notebook</a>
+        <a href="https://colab.research.google.com/drive/1cD5KvZAb_S08g9TvZ4lMjLXjFT-IfuSC?usp=sharing" target="_blank" style="color: white; text-decoration: underline;">View Colab Notebook</a>
     </footer>
     <script src="scripts.js"></script>
 </body>
